2008-02-26 Peter Spjuth   <peter.spjuth@gmail.com>
	* Redesigned API for arc, splitting r to rx/ry.
	  *** INCOMPATIBLE CHANGE ***

2008-02-19 Peter Spjuth   <peter.spjuth@gmail.com>

	* Reworked drawTextBox to work correctly in all orientations.
	  This changes the implementation to keep the text within the box
	  which makes more sense. *** POTENTIAL INCOMPATIBILITY ***

2008-02-19 Peter Spjuth   <peter.spjuth@gmail.com>

	* Renamed BeginTextObj and EndTextObj to make them internal.
	  The user should not need to bother with such details.
	* Removed moveTo and closePath methods since they had no apparent use.
	  *** POTENTIAL INCOMPATIBILITY ***

2008-02-19 Peter Spjuth   <peter.spjuth@gmail.com>

	* Redesigned API for circle and polygon to be more sensible
	  and consistent. *** INCOMPATIBLE CHANGE ***

2008-02-19 Peter Spjuth   <peter.spjuth@gmail.com>

	* Added moveTextPosition method.

2008-02-15 Peter Spjuth   <peter.spjuth@gmail.com>

	* Added document option -unit.

2008-02-13 Peter Spjuth   <peter.spjuth@gmail.com>

	* Added PNG support.
	* Added addRawImage.
	* Added addImage as generic image method. addJpeg is now deprecated.

2008-02-10 Peter Spjuth   <peter.spjuth@gmail.com>

	* Added setLineSpacing and getLineSpacing.
	  Use them in newLine. Contributed by "chd".

2008-02-06 Peter Spjuth   <peter.spjuth@gmail.com>

	* Added height metric to getFontMetric.

2008-02-06 Peter Spjuth   <peter.spjuth@gmail.com>

	* Added Tk's units "m", "c" and "p" to getPoints.

2008-01-21 Peter Spjuth   <peter.spjuth@gmail.com>

	* Added putRawImage, contributed by Steve Redler.

2008-01-19 Peter Spjuth   <peter.spjuth@gmail.com>
	* Release 0.3
	
2006-09-01  Peter Spjuth   <peter.spjuth@gmail.com>

	* Added -file option, to continuously write out to file instead of
	  accumulating in memory.

2006-08-28  Peter Spjuth   <peter.spjuth@gmail.com>

	* Removed -fill from drawTextAt, restoring the 0.2 API.

2006-08-24  Peter Spjuth   <peter.spjuth@gmail.com>
